--- a/register_login/style.css
+++ b/register_login/style.css
@@ -1,38 +1,44 @@
-
-h2{
+h2{ 
     text-align: center;
-    
+    margin-bottom: 0.5em !important;
+    color:#e9d985;
 }
 
-.text{
+form>p{
+    color: #e9d985;
+    margin-top: 0.5em;
+    margin-bottom: 0.3em;
+    font-size: large;
+}
 
-    height: 30px;
-    border-radius: 5px;
-    padding: 4px;
+form{
+    padding: 1em;
+}
+.text{
+    height: 2em;
+    border-radius: 0.5em;
+    padding: 0.25em;
     border: solid thin #aaa;
     width: 100%;
+    margin: 0.6em auto;
 }
 
 #button{
-
-    padding: 10px;
-    width: 80%;
-    border-radius: 10px;
+    padding: 0.6em;
+    width: 70%;
+    border-radius: 0.6em;
     color: white;
-    background-color: lightblue;
+    background-color: #007991;
     border: none;
-    margin: 0 auto;
+    margin: 1em auto;
     display: block;
-   
+    font-size: large;
 }
 
 #box{
-
-    background-color: grey;
-    margin: auto;
-    width: 300px;
-    padding: 20px; 
+    background-color: #222E50;
+    margin: 1em auto;
+    width: 30%;
+    border-radius: 0.5em;
+    padding: 1em; 
 }
-
-
-
