--- a/register_login/style.css
+++ b/register_login/style.css
@@ -1,3 +1,21 @@
+*{
+    font-family:Georgia, 'Times New Roman', Times;
+}
+
+body{
+    background-color:#007991 !important;
+    height: 95vh;
+}
+
+.warn{
+    margin-bottom: 0;
+}
+
+a{
+    margin: 1em auto;
+    color: #e9d985 !important;
+ }
+
 h2{ 
     text-align: center;
     margin-bottom: 0.5em !important;
@@ -41,4 +59,42 @@ form{
     width: 30%;
     border-radius: 0.5em;
     padding: 1em; 
+}
+
+.username_info, .password_info {
+    display: inline-block;
+    font-weight: bold;
+    text-align: center;
+    font-size: 0.8em;
+    line-height: 0.8em;
+    border-radius: 50%;
+    margin-left: 0.4em;
+    padding: 0.13em 0.2em 0.09em 0.2em;
+    color: #e9d985;
+    border: 1px solid;
+    text-decoration: none; 
+}
+
+.username_info:hover ,.password_info:hover{
+    color: red;
+}
+
+.username_info:hover~.test, .password_info:hover~.test2{
+    visibility: visible;
+}
+
+.test, .test2{  
+    width: 12.5em;  
+    display: inline;
+    visibility: hidden;
+    position: absolute;
+    font-size: small;
+    padding: 0.6em;
+    background: linear-gradient(135deg, rgba(233,217,133,0.7), rgba(233,217,133,0.6));
+    backdrop-filter: blur(0.6em);
+    -webkit-backdrop-filter: blur(0.6em);
+    border-radius: 0.6em;
+    border: 0.1em solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 0.5em 2em 0 rgba(0,0,0,0.37);
+    color: navy;
 }
