--- a/todo/todo.css
+++ b/todo/todo.css
@@ -6,6 +6,9 @@
     margin: 0.625em;
     border-radius: 0.3em;
 }
+.item p{
+    flex-basis: 75%;
+}
 .icon-container{
     flex-basis: 25%;
 }
@@ -25,6 +28,13 @@
 }
 .hidden{
     visibility: hidden;
+}
+.deleted-text{
+    text-decoration: line-through;
+    color: crimson;
+}
+.deleted-text span{
+    color:black;
 }
 .fade{
     background-color:  #bcd8c1;
