--- a/todo/todo.css
+++ b/todo/todo.css
@@ -40,7 +40,9 @@
     background-color:  #bcd8c1;
 }
 .header-icon{
-    width: 5em;
+    width: 4.5em;
+    float: left;
+    margin-right: 1em;
     border-radius: 50%;
 }
 .parent{
