changes in btn, task, adding hr style

--- a/todo/todo.css
+++ b/todo/todo.css
@@ -53,3 +53,8 @@
     display: inline-block;
     vertical-align: middle;
 }
+hr{
+   background-color: #222E50;
+   height: 0.3em;
+   border: none;
+}
