--- a/register_login/style.css
+++ b/register_login/style.css
@@ -9,7 +9,7 @@ body{
 
 .warn{
     margin-bottom: 0;
-    font-size: 1.2am;
+    font-size: 1.2em;
 }
 
 a{
@@ -34,7 +34,7 @@ form>p{
     color: #e9d985;
     margin-top: 0.5em;
     margin-bottom: 0.3em;
-    font-size: 1.25am;
+    font-size: 1.25em;
 
 }
 
